<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.recoveryPassword.ResetPasswordEmailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingTop="24dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/AppTheme.Toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp">

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="TODO"
                    android:src="@drawable/ic_keyboard_arrow_left_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="39dp"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/calibri"
                    android:text="@string/title_activity_reset_password_email"
                    android:textColor="#ffffff"
                    android:textSize="24sp" />
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="16dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_form_reset_password_email"
                        android:fontFamily="@font/calibri"
                        android:layout_gravity="center"
                        android:textSize="22dp"
                        android:layout_marginBottom="26dp"
                        android:textColor="#000000"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/field_email"
                        android:fontFamily="@font/calibri"
                        android:textColor="#000000"/>

                    <EditText
                        android:id="@+id/txtEmailFormRecoveryPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/field_email"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/calibri"
                        android:hint="@string/field_email_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:minHeight="48dp"
                        tools:ignore="TextSizeCheck,VisualLintTextFieldSize" />

                    <Button
                        android:id="@+id/btnRequestCodeValidate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="26dp"
                        android:backgroundTint="@color/colorAzulito"
                        android:fontFamily="@font/calibri"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/button_request"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </ScrollView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>