<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.recoveryPassword.ResetPasswordActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8793eb"
        android:paddingTop="24dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/AppTheme.Toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp">

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="TODO"
                    android:src="@drawable/ic_keyboard_arrow_left_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:text="@string/title_activity_reset_password_validation_code"
                    android:fontFamily="@font/calibri"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    />
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="16dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_form_reset_password"
                        android:fontFamily="@font/calibri"
                        android:layout_gravity="center"
                        android:textSize="20dp"
                        android:layout_marginBottom="26dp"
                        android:textColor="#000000"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/field_password"
                        android:fontFamily="@font/calibri"
                        android:textColor="#000000"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:textColorHint="#FFB3B3B3"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/txtPasswordRecovery"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_lock_gray_24dp"
                            android:drawablePadding="16dp"
                            android:fontFamily="@font/calibri"
                            android:hint="@string/field_password_hint"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/field_password_security"
                        android:fontFamily="@font/calibri"
                        android:textColor="#000000"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:textColorHint="#FFB3B3B3"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/txtPasswordRecoveryConfirm"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_lock_gray_24dp"
                            android:drawablePadding="16dp"
                            android:fontFamily="@font/calibri"
                            android:hint="@string/field_password_hint"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnUpdatePassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="26dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:layout_gravity="center"
                        android:text="@string/button_update_password"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </ScrollView>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>